# Cotune-LLM

./: .gitignore  README.md  combiner.py  constants.py  cotune.ipynb  cotune_with_custom_vocab.ipynb  cotune_with_custom_vocab.py  custom_tokenizer.ipynb  decoder.py  driver.py  encoder.py  exploration.ipynb  input_data.py  main.py  output.py  pair_load.py  pyproject.toml  requirements.txt  templates.py  test_ads_unique_analysis.txt  test_feeds_unique_analysis.txt  tokenizer.py  train_ads_unique_analysis.txt  train_feeds_unique_analysis.txt  utils.py  vocab_map.json  workflows.py
cotune_llm/: main.py
cotune_llm/components/: decoder.py  encoder.py  output.py  templates.py  tokenizer.py
cotune_llm/components/combine/: __init__.py  tasks.py
cotune_llm/components/encode/: __init__.py  tasks.py
cotune_llm/components/ingestion/: __init__.py  tasks.py
cotune_llm/components/serialization/: tasks.py
cotune_llm/pipelines/: decode.py  encode.py
cotune_llm/pipelines/helpers/: context_handler.py  files.py
cotune_llm/utils/: constants.py
data/: custom_tokenizer.ipynb
sample_configs/: decode.yaml  encode.yaml
