[tool.poetry]
name = "cotune-llm"
version = "0.1.0"
description = ""
authors = ["Minh Trinh <tminh.us@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
tqdm = "^4.66.5"
ruff = "^0.6.4"
isort = "^5.13.2"
mypy = "^1.11.2"
prefect = "^3.0.1"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
